--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,20 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha3'
     implementation 'com.google.android.material:material:1.0.0'
+
+    // SU
     implementation 'eu.chainfire:libsuperuser:1.0.0.201704021214'
+
+    // Progress Dialog
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
+
+    // KTX
+    implementation 'androidx.core:core-ktx:1.1.0-alpha03'
+
+    // Dagger 2
+    implementation 'com.google.dagger:dagger:2.20'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
