--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     // SU
-    implementation 'eu.chainfire:libsuperuser:1.0.0.201704021214'
+    implementation 'com.github.topjohnwu:libsu:2.1.2'
 
     // Progress Dialog
     implementation 'com.github.d-max:spots-dialog:1.1@aar'
