--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -47,10 +48,14 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.1.0-alpha03'
 
     // Dagger 2
-    implementation 'com.google.dagger:dagger:2.20'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
+    //implementation 'com.google.dagger:dagger:2.20'
+    //annotationProcessor 'com.google.dagger:dagger-compiler:2.20'
+
+    // Klaxon
+    implementation 'com.beust:klaxon:5.0.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    implementation 'com.google.firebase:firebase-database:16.0.5'
 }
