--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="xyz.z3ro.colorenhance">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
             android:name="com.topjohnwu.superuser.ContainerApp"
             android:allowBackup="true"
@@ -24,6 +26,16 @@
                   android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="xyz.z3ro.colorenhance.RESTORE"/>
+
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".ui.activity.PresetActivity"
+                  android:theme="@style/AppTheme.Preset"
+                  android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="xyz.z3ro.colorenhance.PRESET"/>
 
                 <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
